syntax = "proto3";

package taskCoordinate;

service Communicate {
    rpc informPreviousServiceInfo(InformPreviousServiceInfoRequest) returns (InformPreviousServiceInfoResponse) {}
}

message NullRequest {}
message NullResponse {}

// 每次通信的状态
message CustomResponse {
  int32 code = 1;
  string message = 2;
}

message InformPreviousServiceInfoRequest {
    message Argument {
        string key = 1;
        string value = 2;
    }
    int64 taskId = 1;
    string preServiceIp = 2;
    string preServicePort = 3;
    repeated Argument args = 4;
}

message InformPreviousServiceInfoResponse {
    CustomResponse response = 1;
}
